@@ -9,7 +9,7 @@ Job: string
   Selection: string
   NtupleName: string
   Lumi: float
-  LumIScale: float
+  LumiScale: float
   SystPruningShape: float
   SystPruningNorm: float
   SystLarge: float
@@ -136,6 +136,7 @@ Region: string
   HistoPathSuffs: string
   Variable: string
   VariableForSample: string
+  SelectionForSample: string
   Selection: string
   NtupleName: string
   NtuplePathSuff: string
@@ -193,6 +194,7 @@ Sample: string
   DivideBy: string
   AddSample: string
   AddSamples: string
+  NormToSample: string
   SubtractSample: string
   SubtractSamples: string
   Smooth: TRUE/FALSE
