@@ -1,7 +1,8 @@
-2018-05-11 Michele Pinamonti <michele.pinamonti@gmail.com>
+2018-05-21 Michele Pinamonti <michele.pinamonti@gmail.com>
     * Added morphing template smoothing
-    * Added toys to compare with stat. uncertainty from the fit (tested just for stat uncertainty on Asimov)
+    * Added toys to compare with uncertainty from the fit (tested just for stat uncertainty on Asimov, need more checks, need to understand why getting stuck at first invalid fit)
     * Added functionality for non-profile fit (stat-only fits on Asimoc with syst variations one at a time)
+    * String comparison internal functionality improved for wildcards
     * Various fixes
     
 2018-05-04 Alexander Held <alexander.held@cern.ch>
